[package]
name = "gfm-parser"
version = "0.1.0"
edition = "2021"
authors = ["Bhuwan Pandit <bhuwanpandit110@gmail.com>"]
description = "Github Flavoured Markdown Parser with additional features"
readme = "README.md"
repository = "https://github.com/bp7968h/gfm-parser"
license = "MIT"
keywords = ["rust", "parser", "markdown", "github-flavoured-markdown"]

[dependencies]
